Custom scrollbars do not support transparency https://bugs.webkit.org/show_bug.cgi?id=50547

Source/WebCore:

Patch by Hajime Morrita <morrita@chromium.org> on 2012-03-01
Reviewed by James Robinson.

RenderScrollbar, which is used even for outermost frame when
-webkit-scrollbar is specified, assumes that its background is
painted by the enclosing container. But there is no such container
for outermost frame. This causes visual glitches when the
scrollbar has transparency.

This change clears background region for custom
outermostscrollbars to erase such glitches.

Test: fast/frames/transparent-scrollbar.html

* page/FrameView.cpp:
(WebCore::FrameView::paintScrollbar): The background is cleared here.
(WebCore):
* page/FrameView.h:
(FrameView):
* platform/ScrollView.cpp:
(WebCore::ScrollView::paintScrollbar): Added to hook in FrameView
(WebCore):
(WebCore::ScrollView::paintScrollbars):
* platform/ScrollView.h:
(ScrollView):

LayoutTests:

Reviewed by James Robinson.

* fast/frames/transparent-scrollbar.html: Added.
* fast/frames/transparent-scrollbar-expected.txt: Added.
* platform/chromium-linux/fast/frames/transparent-scrollbar-expected.png: Added.

Canonical link: https://commits.webkit.org/97159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109483 268f45cc-cd09-0410-ab3c-d52691b4dbfc